# CourseWorks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coursework  funcs.cpp  funcs.h  main.cpp
include/: funcs.h  mersenne_twister.h
src/: funcs.cpp  main.cpp
